# Embedded-Intent-Recognizer

./: .gitignore  CMakeLists.txt  README.md
build_binaries/: CMakeCache.txt  Makefile  cmake_install.cmake
build_binaries/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_binaries/googletest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_binaries/googletest/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_binaries/src/: IntentRecognizer_run  Makefile  cmake_install.cmake
build_binaries/test/: IntentRecognizer_tst  Makefile  cmake_install.cmake
src/: CMakeLists.txt  intentRecognizer.cpp  intentRecognizer.h  main.cpp
test/: CMakeLists.txt  main_test.cpp  unit_tests.cpp
