######################################
### CMakeLists.txt for Test Folder ###
######################################

SET(BINARY ${CMAKE_PROJECT_NAME}_tst)

FILE(GLOB_RECURSE TEST_SOURCES LIST_DIRECTORIES FALSE *.h *.cpp)

SET(SOURCES ${TEST_SOURCES})

ADD_EXECUTABLE(${BINARY} ${TEST_SOURCES})
ADD_TEST(NAME ${BINARY} COMMAND ${BINARY})

TARGET_LINK_LIBRARIES(${BINARY} PUBLIC ${CMAKE_PROJECT_NAME}_lib gtest)
